--- a/src/App.css
+++ b/src/App.css
@@ -129,7 +129,6 @@
   flex: 3;
   background-color: rgba(215, 204, 248, 0);
   text-align: end;
-  /* color: #0bc734; */
   -webkit-text-stroke: 0.4px #fff;
   font-family: "Livvic", sans-serif;
   font-size: 26px;
@@ -170,18 +169,16 @@
   text-align: center;
   font-family: "Autour One", system-ui;
   font-size: 20px;
-  /* background-color: white; */
   color: rgba(123, 89, 218, 0.7);
   border-radius: 15px;
-  /* border: solid 1px #e4e4e4; */
   box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.25);
 }
 
 #void-foot {
   flex: 0.5;
-  background-color: #ffffff00;
+  /* background-color: #ffffff00; */
 }
 
-#void-foot button {
+/* #void-foot button {
   transform: translateY(50px);
-}
+} */
