--- a/src/App.css
+++ b/src/App.css
@@ -42,9 +42,68 @@
   color: #fff;
   align-content: center;
   text-align: center;
-  /* -webkit-text-stroke: 1px #0d0d0d; */
   font-family: "Audiowide", sans-serif;
   font-size: 28px;
+}
+
+#quit-confirm-window {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  display: flex;
+  flex-direction: column;
+  transform: translate(-50%, -50%);
+  width: 100%;
+  height: 100%;
+  align-content: center;
+  text-align: center;
+  border-radius: 25px;
+  box-shadow: 1px 1px 4px 1px rgba(0, 0, 0, 0.25);
+  border: solid 3px rgba(179, 179, 179, 0.7);
+  background-color: #fff;
+}
+
+#confirm-text {
+  flex: 2;
+  width: 100%;
+  height: 100%;
+  border-radius: 25px;
+  align-content: center;
+  text-align: center;
+  font-family: "Autour One", system-ui;
+  font-size: 16px;
+  color: rgba(123, 89, 218, 0.7);
+}
+
+#confirm-buttons {
+  flex: 1;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border-radius: 25px;
+}
+
+#yes,
+#no {
+  border-radius: 25px;
+  width: 50px;
+  height: 25px;
+  color: rgba(123, 89, 218, 0.7);
+  align-content: center;
+  text-align: center;
+  font-family: "Livvic", sans-serif;
+  font-size: 16px;
+  font-weight: bold;
+}
+
+#yes {
+  background-color: rgba(160, 249, 146, 0.7);
+}
+
+#no {
+  background-color: rgba(232, 101, 101, 0.7);
 }
 
 #quiz-timer {
@@ -137,6 +196,7 @@
 }
 
 #ask-box {
+  position: relative;
   flex: 2;
   width: 85%;
   margin-bottom: 30px;
