--- a/src/App.css
+++ b/src/App.css
@@ -11,6 +11,86 @@
   background-color: cyan;
 }
 
+/* HOME PAGE LAYOUT
+   ---------------- 
+   ---------------- */
+
+#home-page-container {
+  position: relative;
+  background-color: white;
+  display: flex;
+  flex-direction: column;
+}
+
+/* HOME PAGE HEADER LAYOUT
+   ----------------------- */
+
+#home-page-header {
+  flex: 1;
+  width: 90%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background-color: white;
+}
+
+#home-page-header * {
+  margin: initial;
+}
+
+#greeting {
+  background-color: white;
+  color: black;
+  font-family: "Livvic", sans-serif;
+  font-size: 1.75rem;
+  font-weight: bold;
+}
+
+/* HOME PAGE QUIZ SELECTION LAYOUT
+   ------------------------------- */
+
+#quiz-select-container {
+  flex: 7;
+  background-color: #7b59da;
+  border-radius: 1rem 1rem 0 0;
+  display: flex;
+  flex-direction: column;
+}
+
+#quiz-select-container * {
+  background-color: #7b59da;
+}
+
+.title-box {
+  flex: 1;
+  width: 90%;
+  align-content: center;
+}
+
+.quiz-select-title {
+  text-align: left;
+  color: #fff;
+  -webkit-text-stroke: #4e4e4e thin;
+  font-family: "Livvic", sans-serif;
+  font-size: 1.5rem;
+  font-weight: 700;
+}
+
+#quick-quiz-box {
+  flex: 5;
+  width: 90%;
+}
+
+#quiz-creation-container {
+  flex: 1;
+  width: 90%;
+}
+
+#challenges-box {
+  flex: 3.5;
+  width: 90%;
+}
+
 /* QUIZ PAGE LAYOUT
    ---------------- 
    ---------------- */
