--- a/src/App.css
+++ b/src/App.css
@@ -30,6 +30,7 @@
   flex: 1.25;
   width: 90%;
   display: flex;
+  z-index: 2;
   align-items: center;
   justify-content: space-between;
   background-color: white;
@@ -55,27 +56,81 @@
 /* HOME PAGE PROFILE MENU LAYOUT
    ----------------------------- */
 
-#profile-menu-window {
+#profile-menu-container {
   position: absolute;
-  top: 0;
+  top: 50%;
+  left: 50%;
   z-index: 1;
   width: 100%;
+  height: 100%;
+  transform: translate(-50%, 0%);
   transition: transform ease-in-out 1s;
-  transform: translateY(45%);
-  background-color: #669fa7;
-  border-radius: 1rem 1rem 0 0;
+  background-color: #ffffff00;
   display: flex;
   flex-direction: column;
 }
 
-#profile-menu-window p {
+#profile-void {
+  flex: 1.25;
+  background-color: #ffffff00;
+}
+
+#profile-menu-window {
+  flex: 7;
   color: #fff;
+  background-color: #669fa7;
+  width: 100%;
+  border-radius: 1rem 1rem 0 0;
+}
+
+#profile-menu-window * {
   background-color: #669fa7;
 }
 
-#profile-void {
+#profile-menu-window p {
+  display: flex;
+  width: fit-content;
+}
+
+#profile-menu-title {
+  display: flex;
+  width: fit-content;
+  margin: 5% auto;
+  font-family: "Livvic", sans-serif;
+  font-size: 1.5rem;
+  font-weight: 600;
+}
+
+#user-name-change {
+  display: flex;
+  width: 90%;
+  margin: 2% auto;
+  justify-content: space-between;
+  align-items: center;
+}
+
+#user-name-change label {
+  margin: 0;
+  font-family: "Livvic", sans-serif;
+  font-size: 1rem;
+  font-weight: 500;
+}
+
+#user-name-change input {
+  margin: 0;
+  background-color: #7b59da;
+  border-radius: 1rem;
+  padding: 5px;
+  text-align: center;
+  color: #fff;
+  font-family: "Livvic", sans-serif;
+  font-size: 1rem;
+  font-weight: 500;
+  border: none;
+}
+
+#user-name-change input:focus {
   background-color: #669fa7;
-  padding-bottom: 200%;
 }
 
 /* HOME PAGE QUIZ SELECTION LAYOUT
