--- a/src/App.css
+++ b/src/App.css
@@ -18,6 +18,7 @@
 #home-page-container {
   position: relative;
   background-color: white;
+  background-size: cover;
   display: flex;
   flex-direction: column;
   overflow: hidden;
@@ -33,7 +34,7 @@
   z-index: 2;
   align-items: center;
   justify-content: space-between;
-  background-color: white;
+  background-color: rgba(255, 255, 255, 0);
 }
 
 #home-page-header * {
@@ -41,8 +42,7 @@
 }
 
 #greeting {
-  background-color: white;
-  color: black;
+  background-color: rgba(255, 255, 255, 0);
   font-family: "Livvic", sans-serif;
   font-size: 1.75rem;
   font-weight: bold;
@@ -50,7 +50,11 @@
 
 #profile-button {
   border: none;
-  background-color: white;
+  background-color: rgba(255, 255, 255, 0);
+}
+
+#profile-button img {
+  background-color: rgba(255, 255, 255, 0);
 }
 
 /* HOME PAGE PROFILE MENU LAYOUT
@@ -63,7 +67,7 @@
   z-index: 1;
   width: 100%;
   height: 100%;
-  transform: translate(-50%, 0%);
+  transform: translate(-50%, 50%);
   transition: transform ease-in-out 1s;
   background-color: #ffffff00;
   display: flex;
@@ -78,13 +82,12 @@
 #profile-menu-window {
   flex: 7;
   color: #fff;
-  background-color: #669fa7;
   width: 100%;
   border-radius: 1rem 1rem 0 0;
 }
 
 #profile-menu-window * {
-  background-color: #669fa7;
+  background-color: #669fa700;
 }
 
 #profile-menu-window p {
@@ -96,9 +99,10 @@
   display: flex;
   width: fit-content;
   margin: 5% auto;
+  -webkit-text-stroke: #4e4e4e thin;
   font-family: "Livvic", sans-serif;
   font-size: 1.5rem;
-  font-weight: 600;
+  font-weight: 700;
 }
 
 #user-name-change {
@@ -129,8 +133,51 @@
   border: none;
 }
 
-#user-name-change input:focus {
-  background-color: #669fa7;
+#theme-change {
+  display: flex;
+  width: 90%;
+  margin: 5% auto;
+  justify-content: space-between;
+  align-items: center;
+}
+
+#theme-change label {
+  margin: 0;
+  font-family: "Livvic", sans-serif;
+  font-size: 1rem;
+  font-weight: 500;
+}
+
+#theme-change select {
+  margin: 0;
+  width: 13.5rem;
+  border-radius: 1rem;
+  padding: 5px;
+  text-align: center;
+  color: #fff;
+  font-family: "Livvic", sans-serif;
+  font-size: 1rem;
+  font-weight: 500;
+  border: none;
+}
+
+#menu-closing {
+  display: flex;
+  width: 90%;
+  margin: 16% auto 5% auto;
+  justify-content: center;
+  align-items: center;
+}
+
+#menu-closing-button {
+  background-color: #fff;
+  font-family: "Livvic", sans-serif;
+  font-size: 1.15rem;
+  font-weight: 600;
+  border: none;
+  border-radius: 0.75rem;
+  box-shadow: 1px 1px 4px 1px rgba(123, 123, 123, 0.7);
+  padding: 0.35rem 2rem;
 }
 
 /* HOME PAGE QUIZ SELECTION LAYOUT
@@ -147,7 +194,7 @@
 }
 
 #quiz-select-container * {
-  background-color: #7b59da;
+  background-color: #7b59da00;
 }
 
 .title-box {
@@ -170,6 +217,7 @@
   width: 95%;
   display: flex;
   flex-wrap: wrap;
+  text-align: center;
 }
 
 .quick-quiz-button {
@@ -180,7 +228,7 @@
   border-radius: 1rem;
   color: #fff;
   font-family: "Livvic", sans-serif;
-  text-align: left;
+  font-weight: 600;
   text-decoration: none;
   display: flex;
   flex-direction: column;
@@ -189,14 +237,11 @@
 .theme {
   font-size: 1.05rem;
   margin-top: 0.3rem;
-  margin-left: 0.5rem;
-  border-radius: 1rem;
 }
 
 .settings {
   margin-top: 0.2rem;
   font-size: 0.85rem;
-  margin-left: 12px;
 }
 
 #quiz-creation-container {
@@ -208,7 +253,6 @@
 
 #quiz-creation-button {
   background-color: #fff;
-  color: #7b59da;
   font-family: "Livvic", sans-serif;
   font-size: 1.15rem;
   font-weight: 600;
@@ -235,6 +279,7 @@
   border-radius: 1rem;
   color: #fff;
   font-family: "Livvic", sans-serif;
+  font-weight: 600;
 }
 
 .mode {
@@ -250,10 +295,11 @@
   background-color: white;
   display: flex;
   flex-direction: column;
+  background-size: cover;
 }
 
 #quiz-page-container * {
-  background-color: white;
+  background-color: rgba(255, 255, 255, 0);
 }
 
 /* QUIZ PAGE HEADER LAYOUT
@@ -273,10 +319,9 @@
 #quit-button {
   width: 60px;
   height: 60px;
-  border: solid 2px rgba(123, 89, 218, 0.5);
+  border: solid 2px;
   border-radius: 50px;
-  background-color: rgba(123, 89, 218, 0.5);
-  color: #fff;
+  color: #ffffff;
   font-family: "Audiowide", sans-serif;
   font-size: 28px;
 }
@@ -343,9 +388,8 @@
   position: relative;
   width: 60px;
   height: 60px;
-  border: solid 2px rgba(123, 89, 218, 0.5);
+  border: solid 2px;
   border-radius: 50px;
-  background-color: rgba(123, 89, 218, 0.5);
   align-content: center;
   text-align: center;
 }
@@ -384,12 +428,11 @@
 #score-number {
   padding: 0.25rem 1.5rem;
   border-radius: 1rem;
-  border: solid 1px rgba(123, 89, 218, 0.7);
-  background-color: rgba(123, 89, 218, 0.7);
+  border: solid 1px;
   font-family: "Livvic", sans-serif;
   font-size: 1.25rem;
   font-weight: 600;
-  color: #fff;
+  color: #ffffff;
 }
 
 /* QUESTION CARD LAYOUT
@@ -429,7 +472,6 @@
   font-family: "Livvic", sans-serif;
   font-size: 1.25rem;
   font-weight: 600;
-  color: rgba(123, 89, 218, 0.9);
 }
 
 #quiz-check-text {
@@ -451,7 +493,6 @@
   border-radius: 1rem;
   box-shadow: 1px 1px 4px 1px rgba(0, 0, 0, 0.25);
   border: solid 3px rgba(179, 179, 179, 0.7);
-  background-color: rgba(123, 89, 218, 0.7);
 }
 
 #question-text {
@@ -483,7 +524,6 @@
   height: 100%;
   font-family: "Autour One", system-ui;
   font-size: 1rem;
-  color: rgba(123, 89, 218, 0.7);
   border-radius: 1rem;
   box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.25);
 }
