--- a/src/App.css
+++ b/src/App.css
@@ -20,6 +20,7 @@
   background-color: white;
   display: flex;
   flex-direction: column;
+  overflow: hidden;
 }
 
 /* HOME PAGE HEADER LAYOUT
@@ -318,12 +319,6 @@
   flex-direction: column;
 }
 
-#void-bottom {
-  flex: 1;
-  background-color: rgba(255, 255, 255, 0);
-  width: 100%;
-}
-
 #card-header {
   flex: 1;
   width: 85%;
@@ -401,4 +396,109 @@
 
 #void-foot {
   flex: 0.5;
+}
+
+/* LIVES REMAINING LAYOUT
+   ---------------------- */
+
+#lives-remaining-container {
+  flex: 1;
+  background-color: rgba(255, 255, 255, 0);
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+}
+
+#lives-remaining-container * {
+  background-color: rgba(255, 255, 255, 0);
+}
+
+#lives-remaining-title {
+  font-family: "Livvic", sans-serif;
+  font-size: 1.25rem;
+  font-weight: 600;
+  color: rgba(123, 89, 218, 0.7);
+  margin: 3% auto 2% auto;
+}
+
+/* CHALLENGE MENU LAYOUT
+   ---------------------- 
+   ---------------------- */
+
+#challenge-menu-container {
+  position: absolute;
+  z-index: 3;
+  width: 100%;
+  height: 100%;
+  top: 0%;
+  left: 0%;
+  background-color: rgba(153, 151, 151, 0.5);
+  display: flex;
+  flex-direction: column;
+  transition: all 1s ease-in-out;
+  transform: translateY(100%);
+}
+
+#grey-void {
+  flex: 1;
+  width: 100%;
+  background-color: rgba(153, 151, 151, 0);
+  display: flex;
+}
+
+#challenge-menu {
+  flex: 0.85;
+  width: 100%;
+  background-color: #f5f5f5;
+  border-radius: 1rem 1rem 0 0;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  font-family: "Livvic", sans-serif;
+}
+
+#challenge-menu * {
+  background-color: rgba(153, 151, 151, 0);
+}
+
+#challenge-image-container {
+  flex: 1;
+  margin-top: 6%;
+  width: 88%;
+}
+
+#challenge-image-container img {
+  border-radius: 1rem;
+}
+
+#challenge-text-container {
+  flex: 1;
+  width: 90%;
+}
+
+#challenge-text-title {
+  font-size: 1.3rem;
+  font-weight: 700;
+  margin-top: 1%;
+}
+
+#challenge-text-content {
+  font-size: 1rem;
+  font-weight: 500;
+  margin-top: 1%;
+}
+
+#challenge-launch-container {
+  flex: 0.4;
+  width: 90%;
+}
+
+#challenge-launch-button {
+  background-color: #7b59dada;
+  color: #fff;
+  text-decoration: none;
+  padding: 0.5rem 2rem;
+  border-radius: 0.75rem;
+  font-weight: 600;
 }
