--- a/src/App.css
+++ b/src/App.css
@@ -216,16 +216,18 @@
 
 #quick-quiz-box {
   flex: 5;
-  width: 95%;
+  width: 90%;
   display: flex;
   flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
   text-align: center;
 }
 
 .quick-quiz-button {
-  width: 43%;
-  height: 29%;
-  margin: 2% 3%;
+  width: 47%;
+  height: 30%;
+  margin: 0 0;
   border: none;
   border-radius: 1rem;
   color: #fff;
@@ -267,16 +269,19 @@
 
 #challenges-box {
   flex: 3.5;
-  width: 95%;
+  width: 90%;
   display: flex;
   flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
+  text-align: center;
   margin-bottom: 5%;
 }
 
 .challenges-button {
-  width: 43%;
-  height: 43%;
-  margin: 2% 3%;
+  width: 47%;
+  height: 44%;
+  margin: 0 0;
   border: none;
   border-radius: 1rem;
   color: #fff;
@@ -413,13 +418,55 @@
   background-color: #ffffff00;
 }
 
-@keyframes rotation {
+@keyframes turning {
   from {
     transform: rotate(0deg);
   }
 
   to {
     transform: rotate(360deg);
+  }
+}
+
+@keyframes wobbling {
+  0% {
+    transform: rotate(0deg);
+  }
+  12.5% {
+    transform: rotate(-20deg);
+  }
+  25% {
+    transform: rotate(0deg);
+  }
+  37.5% {
+    transform: rotate(20deg);
+  }
+  50% {
+    transform: rotate(0deg);
+  }
+  67.5% {
+    transform: rotate(-20deg);
+  }
+  75% {
+    transform: rotate(0deg);
+  }
+  87.5% {
+    transform: rotate(20deg);
+  }
+  100% {
+    transform: rotate(0deg);
+  }
+}
+
+@keyframes hurry-timer {
+  from {
+    color: #cc271c;
+    font-size: 2.5rem;
+  }
+
+  to {
+    color: #fff;
+    font-size: 1.5rem;
   }
 }
 
