--- a/src/App.css
+++ b/src/App.css
@@ -496,6 +496,137 @@
   color: #ffffff;
 }
 
+@keyframes rainbow-streak {
+  0% {
+    background-image: linear-gradient(
+      90deg,
+      rgba(255, 0, 0, 1) 0%,
+      rgba(255, 154, 0, 1) 10%,
+      rgba(208, 222, 33, 1) 20%,
+      rgba(79, 220, 74, 1) 30%,
+      rgba(63, 218, 216, 1) 40%,
+      rgba(47, 201, 226, 1) 50%,
+      rgba(28, 127, 238, 1) 60%,
+      rgba(95, 21, 242, 1) 70%,
+      rgba(186, 12, 248, 1) 80%,
+      rgba(251, 7, 217, 1) 90%,
+      rgba(255, 0, 0, 1) 100%
+    );
+  }
+  14% {
+    background-image: linear-gradient(
+      90deg,
+      rgba(255, 154, 0, 1) 0%,
+      rgba(208, 222, 33, 1) 10%,
+      rgba(79, 220, 74, 1) 20%,
+      rgba(63, 218, 216, 1) 30%,
+      rgba(47, 201, 226, 1) 40%,
+      rgba(28, 127, 238, 1) 50%,
+      rgba(95, 21, 242, 1) 60%,
+      rgba(186, 12, 248, 1) 70%,
+      rgba(251, 7, 217, 1) 80%,
+      rgba(255, 0, 0, 1) 90%,
+      rgba(255, 154, 0, 1) 100%
+    );
+  }
+  28% {
+    background-image: linear-gradient(
+      90deg,
+      rgba(208, 222, 33, 1) 0%,
+      rgba(79, 220, 74, 1) 10%,
+      rgba(63, 218, 216, 1) 20%,
+      rgba(47, 201, 226, 1) 30%,
+      rgba(28, 127, 238, 1) 40%,
+      rgba(95, 21, 242, 1) 50%,
+      rgba(186, 12, 248, 1) 60%,
+      rgba(251, 7, 217, 1) 70%,
+      rgba(255, 0, 0, 1) 80%,
+      rgba(255, 154, 0, 1) 90%,
+      rgba(208, 222, 33, 1) 100%
+    );
+  }
+  42% {
+    background-image: linear-gradient(
+      90deg,
+      rgba(79, 220, 74, 1) 0%,
+      rgba(63, 218, 216, 1) 10%,
+      rgba(47, 201, 226, 1) 20%,
+      rgba(28, 127, 238, 1) 30%,
+      rgba(95, 21, 242, 1) 40%,
+      rgba(186, 12, 248, 1) 50%,
+      rgba(251, 7, 217, 1) 60%,
+      rgba(255, 0, 0, 1) 70%,
+      rgba(255, 154, 0, 1) 80%,
+      rgba(208, 222, 33, 1) 90%,
+      rgba(79, 220, 74, 1) 100%
+    );
+  }
+  57% {
+    background-image: linear-gradient(
+      90deg,
+      rgba(63, 218, 216, 1) 0%,
+      rgba(47, 201, 226, 1) 10%,
+      rgba(28, 127, 238, 1) 20%,
+      rgba(95, 21, 242, 1) 30%,
+      rgba(186, 12, 248, 1) 40%,
+      rgba(251, 7, 217, 1) 50%,
+      rgba(255, 0, 0, 1) 60%,
+      rgba(255, 154, 0, 1) 70%,
+      rgba(208, 222, 33, 1) 80%,
+      rgba(79, 220, 74, 1) 90%,
+      rgba(63, 218, 216, 1) 100%
+    );
+  }
+  71% {
+    background-image: linear-gradient(
+      90deg,
+      rgba(28, 127, 238, 1) 0%,
+      rgba(95, 21, 242, 1) 10%,
+      rgba(186, 12, 248, 1) 20%,
+      rgba(251, 7, 217, 1) 30%,
+      rgba(255, 0, 0, 1) 40%,
+      rgba(255, 154, 0, 1) 50%,
+      rgba(208, 222, 33, 1) 60%,
+      rgba(79, 220, 74, 1) 70%,
+      rgba(63, 218, 216, 1) 80%,
+      rgba(47, 201, 226, 1) 90%,
+      rgba(28, 127, 238, 1) 100%
+    );
+  }
+  86% {
+    background-image: linear-gradient(
+      90deg,
+      rgba(186, 12, 248, 1) 0%,
+      rgba(251, 7, 217, 1) 10%,
+      rgba(255, 0, 0, 1) 20%,
+      rgba(255, 154, 0, 1) 30%,
+      rgba(208, 222, 33, 1) 40%,
+      rgba(79, 220, 74, 1) 50%,
+      rgba(63, 218, 216, 1) 60%,
+      rgba(47, 201, 226, 1) 70%,
+      rgba(28, 127, 238, 1) 80%,
+      rgba(95, 21, 242, 1) 90%,
+      rgba(186, 12, 248, 1) 100%
+    );
+  }
+  100% {
+    background-image: linear-gradient(
+      90deg,
+      rgba(255, 0, 0, 1) 0%,
+      rgba(255, 154, 0, 1) 10%,
+      rgba(208, 222, 33, 1) 20%,
+      rgba(79, 220, 74, 1) 30%,
+      rgba(63, 218, 216, 1) 40%,
+      rgba(47, 201, 226, 1) 50%,
+      rgba(28, 127, 238, 1) 60%,
+      rgba(95, 21, 242, 1) 70%,
+      rgba(186, 12, 248, 1) 80%,
+      rgba(251, 7, 217, 1) 90%,
+      rgba(255, 0, 0, 1) 100%
+    );
+  }
+}
+
 #score-add {
   position: absolute;
   bottom: 0;
