--- a/src/App.css
+++ b/src/App.css
@@ -851,6 +851,139 @@
   font-weight: 600;
 }
 
+/* QUIZ RESULTS LAYOUT
+   -------------------
+   ------------------- */
+
+#quiz-results-container {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  left: 0;
+  top: 0;
+  z-index: 2;
+  background-color: white;
+  display: flex;
+  flex-direction: column;
+}
+
+#quiz-results-container * {
+  background-color: rgba(255, 255, 255, 0);
+}
+
+#result-img-container {
+  flex: 3;
+  width: 100%;
+  align-content: center;
+  text-align: center;
+  z-index: 2;
+}
+
+#quiz-results-card {
+  flex: 6;
+  width: 90%;
+  align-content: center;
+  text-align: center;
+  z-index: 2;
+  box-shadow: 1px 1px 4px 1px rgba(123, 123, 123, 0.7);
+  border-radius: 1.25rem;
+  display: flex;
+  flex-direction: column;
+  font-family: "Livvic", sans-serif;
+  background-color: rgba(215, 204, 248, 0.7);
+}
+
+#result-text-container {
+  flex: 3;
+  align-content: center;
+  display: flex;
+  flex-direction: column;
+}
+
+#result-title {
+  flex: 1.2;
+  align-content: center;
+  font-weight: 700;
+  font-size: 2rem;
+}
+
+.result-text {
+  flex: 1;
+  align-content: center;
+  font-weight: 600;
+  font-size: 1.5rem;
+}
+
+.result-text:last-of-type {
+  margin-bottom: 0.5rem;
+}
+
+#summary-card {
+  flex: 3;
+  width: 85%;
+  align-content: center;
+  text-align: center;
+  box-shadow: 1px 1px 4px 1px rgba(123, 123, 123, 0.7);
+  border-radius: 1rem;
+  font-family: "Livvic", sans-serif;
+  display: flex;
+  flex-direction: column;
+  background-color: white;
+}
+
+#summary-title {
+  flex: 1;
+  align-content: center;
+  font-weight: 600;
+  font-size: 1.75rem;
+}
+
+#summary-box {
+  flex: 4;
+  align-content: center;
+  width: 90%;
+}
+
+dt.summary-text {
+  text-decoration-line: underline;
+}
+
+dd.summary-text {
+  margin-bottom: 0.25rem;
+  font-size: 1.25rem;
+  font-weight: 600;
+  text-transform: capitalize;
+}
+
+#ranking-result {
+  flex: 0.15;
+  align-content: center;
+  font-weight: 600;
+  font-size: 1.5rem;
+  text-decoration-line: underline;
+  text-decoration-thickness: 2px;
+}
+
+#results-quit {
+  flex: 1.5;
+  width: 100%;
+  z-index: 2;
+  align-content: center;
+  text-align: center;
+  font-family: "Livvic", sans-serif;
+}
+
+#back-button {
+  color: #fff;
+  box-shadow: 1px 1px 4px 1px rgba(123, 123, 123, 0.7);
+  border: none;
+  border-radius: 0.75rem;
+  font-family: "Livvic", sans-serif;
+  font-weight: 600;
+  font-size: 1.5rem;
+  padding: 0.25rem 2.5rem 0.5rem;
+}
+
 /* QUICK QUIZ MENU LAYOUT
    ---------------------- 
    ---------------------- */
