--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,6 @@
   width: 360px;
   height: 760px;
   display: flex;
-  background-color: cyan;
 }
 
 /* HOME PAGE LAYOUT
@@ -782,11 +781,15 @@
   height: 100%;
   top: 0%;
   left: 0%;
-  background-color: rgba(153, 151, 151, 0.5);
+  background-color: rgba(153, 151, 151, 0);
   display: flex;
   flex-direction: column;
-  transition: all 1s ease-in-out;
+  transition: all 1s ease-in-out, background-color 0.5s 1s ease-in-out;
   transform: translateY(100%);
+  -webkit-transition: all 1s ease-in-out, background-color 0.5s 1s ease-in-out;
+  -moz-transition: all 1s ease-in-out, background-color 0.5s 1s ease-in-out;
+  -ms-transition: all 1s ease-in-out, background-color 0.5s 1s ease-in-out;
+  -o-transition: all 1s ease-in-out, background-color 0.5s 1s ease-in-out;
 }
 
 .grey-void {
@@ -995,10 +998,10 @@ dd.summary-text {
   height: 100%;
   top: 0%;
   left: 0%;
-  background-color: rgba(153, 151, 151, 0.5);
+  background-color: rgba(153, 151, 151, 0);
   display: flex;
   flex-direction: column;
-  transition: all 1s ease-in-out;
+  transition: all 1s ease-in-out, background-color 0.5s 1s ease-in-out;
   transform: translateY(100%);
 }
 
@@ -1069,10 +1072,10 @@ dd.summary-text {
   height: 100%;
   top: 0%;
   left: 0%;
-  background-color: rgba(153, 151, 151, 0.5);
+  background-color: rgba(153, 151, 151, 0);
   display: flex;
   flex-direction: column;
-  transition: all 1s ease-in-out;
+  transition: all 1s ease-in-out, background-color 0.5s 1s ease-in-out;
   transform: translateY(100%);
 }
 
