--- a/src/App.css
+++ b/src/App.css
@@ -1176,6 +1176,7 @@ dd.summary-text {
 #timer-selection input {
   margin: 0 0;
   width: 80%;
+  accent-color: #8E70DF;
 }
 
 #custom-quiz-launch-container {
