--- a/src/App.css
+++ b/src/App.css
@@ -1247,3 +1247,59 @@ dd.summary-text {
   font-weight: 600;
   font-size: 1.5rem;
 }
+
+/* PAGE NOT FOUND 404 PAGE LAYOUT
+   ----------------- 
+   ----------------- */
+
+   #notfound-page-container {
+    position: relative;
+    width: 100%;
+    background-color: white;
+    background-size: cover;
+    display: flex;
+    flex-direction: column;
+    overflow: hidden;
+    text-align: center;
+  }
+  
+  #notfound-page-container * {
+    background-color: rgba(255, 255, 255, 0);
+  }
+  
+  #notfound-text {
+    flex: 2;
+    width: 90%;
+    font-family: "Livvic", sans-serif;
+    font-weight: 600;
+    font-size: 2.5rem;
+    transform: translateY(20%);
+  }
+  
+  #notfound-description {
+    flex: 3;
+    width: 90%;
+    font-family: "Livvic", sans-serif;
+    font-weight: 600;
+    font-size: 1.3rem;
+    transform: translateY(10%);
+  }
+  
+  #notfound-quit-container {
+    flex: 1;
+    width: 90%;
+    text-align: center;
+    transform: translateY(10%);
+  }
+  
+  #notfound-quit-button {
+    color: #000;
+    background-color: #fff;
+    text-decoration: none;
+    padding: 0.5rem 3rem;
+    border-radius: 0.75rem;
+    font-family: "Livvic", sans-serif;
+    font-weight: 600;
+    font-size: 1.5rem;
+  }
+  
